<resources>
    <string name="app_name">LabGo</string>
    <string name="login_password_hint">Enter Password</string>
    <string name="login_gtid_hint">Enter GTID</string>
    <string name="add_item_tool_name_hint">Tool Name</string>
    <string name="add_item_tool_description_hint">Tool Description</string>
    <string name="add_item_tool_image_hint">Tool Image URL</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_gtid_hint">GTID</string>
    <string name="sign_up_user_name_hint">NAME</string>
    <string name="sign_up_user_email_hint">E-MAIL</string>
    <string name="sign_up_user_password_hint">PASSWORD</string>
    <string name="submit">SUBMIT</string>


    <string name="title_activity_qrcode">QRCode</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_qr_code">QR Code</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search_item">Search Item</string>

    <string name="camera_hint">Please take a picture of your BuzzCard with photo facing up</string>
    <string name="camera_gtid_hint">GTID will be displayed \nhere after taking a picture</string>

    <string name="title_qr_code">QR Code</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_inventory">Inventory</string>
    <string name="title_notification">Notification</string>

    <string name="segment_qr_code">QR CODE</string>
    <string name="segment_dashboard">DASHBOARD</string>
    <string name="segment_inventory">INVENTORY</string>
    <string name="segment_notification">NOTIFICATION</string>

    <string name="error_message">
        An error has occurred. Please try again by clicking REFRESH
    </string>

    <string name="no_checked_out_items">No checked out items</string>
    <string name="no_inventory_items">The inventory is EMPTY!</string>

    <string name="refresh_scanned_item_hint">Please scan one item and refresh this page.</string>
    <string name="clean_scanned_item_hint">Only one item should be scanned. Please clean the scanned items and rescan.</string>

    <string name="add_inventory_title">Are you sure you want to ADD this item?</string>
    <string name="delete_inventory_title">Are you sure you want to DELETE this item?</string>
    <string name="title_activity_update_item">Update Item</string>
    <string name="title_activity_settings">Settings</string>

    <string name="toast_image_register_fail">Sorry, the image could not be registered. Please contact the TA.</string>

</resources>
