<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search_item"
        android:orderInCategory="1"
        android:title="@string/action_search_item"
        android:icon="@drawable/ic_search_toolbar"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="2"
        android:icon="@drawable/ic_refresh_white"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_qr_code"
        android:orderInCategory="3"
        android:icon="@drawable/ic_qr_code_white"
        android:title="@string/action_qr_code"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="4"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
