<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:background="@color/brightGray">

    <RelativeLayout
        android:id="@+id/layout_sign_in"
        android:layout_width="@dimen/login_area_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/login_area_top_margin">

        <ImageView
            android:id="@+id/image_app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"/>

        <FrameLayout
            android:id="@+id/layout_gtid"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_app_icon"
            android:layout_centerHorizontal="true">

            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_gtid_hint">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/field_sign_in_gtid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:id="@+id/button_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:layout_marginRight="@dimen/login_camera_button_right_margin"
                android:background="@drawable/ic_sign_in_camera"
                android:layout_gravity="end|center_vertical"/>
        </FrameLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_sign_in_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/layout_gtid"
            android:hint="@string/login_password_hint"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/field_sign_in_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/layout_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_sign_in_password"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_sign_in"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/sign_in_buttons_margin"
                android:background="@color/buzzBlue"
                android:textColor="@color/white"
                android:text="@string/sign_in" />


            <Button
                android:id="@+id/button_sign_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/sign_in_buttons_margin"
                android:text="@string/sign_up" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>